pod-security/subrule/restricted/restricted-exclude-capabilities/.kyverno-test/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: ghcr.io/kyverno/test-nginx:latest
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          add:
            - SYS_ADMIN
          drop:
            - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: busybox:1.28
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        capabilities:
          add:
            - SYS_ADMIN
          drop:
            - ALL
